--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
 <body style='margin : 0px; overflow: hidden;'>
   <a-scene embedded arjs>
     <!-- create your content here. just a box for now -->
-    <a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>
+    <!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
     <!-- define a camera which will move according to the marker position -->
+    <a-assets>
+      <a-asset-item id="dog" src="https://github.com/jrem090/ARFrame/blob/master/husky.gltf"></a-asset-item>
+    </a-assets>
+    <!-- use your gltf model -->
+    <a-entity gltf-model="##dog"></a-entity>
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
