--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <a-asset-item id="dog" src="https://github.com/jrem090/ARFrame/blob/master/husky.gltf"></a-asset-item>
     </a-assets>
     <!-- use your gltf model -->
-    <a-entity gltf-model="##dog"></a-entity>
+    <a-entity gltf-model="#dog"></a-entity>
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
