--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </a-assets>-->
     <!-- use your gltf model -->
     <!--<a-entity gltf-model="#dog"></a-entity>-->
-    <a-entity gltf-model="url(https://github.com/jrem090/ARFrame/blob/master/husky.gltf)"></a-entity>
+    <a-entity gltf-model="url(https://github.com/jrem090/ARFrame/blob/master/husky.gltf)" position='0 0.5 0'></a-entity>
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
