--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+Access-Control-Allow-Origin: *
+
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
