--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Access-Control-Allow-Origin: *
     </a-assets>-->
     <!-- use your gltf model -->
     <!--<a-entity gltf-model="#dog"></a-entity>-->
-    <a-entity gltf-model="url('https://ucarecdn.com/24515b7f-09c1-40ee-9f30-094c7d0bdaf3/')" crossorigin=anonymous position='0 0.5 0' ></a-entity>
+    <a-entity gltf-model="url(https://raw.githubusercontent.com/jrem090/ARFrame/master/husky_glb.glb)" crossorigin=anonymous position='0 0.5 0' ></a-entity>
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
