--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Access-Control-Allow-Origin: *
     <!--<a-box position='0 0.5 0' material='opacity: 0.5;'></a-box>-->
     <!-- define a camera which will move according to the marker position -->
     <a-assets>
-      <a-asset-item id="dog" src="https://raw.githubusercontent.com/jrem090/ARFrame/master/husky_glb.glb" crossorigin=anonymous></a-asset-item>
+      <a-asset-item id="dog" src="https://raw.githubusercontent.com/jrem090/ARFrame/master/husky_glb.glb"></a-asset-item>
     </a-assets>
     <!-- use your gltf model -->
     <a-entity gltf-model="#dog"></a-entity>
