--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Access-Control-Allow-Origin: *
     </a-assets>
     <!-- use your gltf model -->
     <a-entity gltf-model="#dog"></a-entity>
-    <a-entity gltf-model="url(https://jrem090.github.io/ARFrame/)"></a-entity>
+    <a-entity gltf-model="url(https://jrem090.github.io/ARFrame/husky_glb.glb)"></a-entity>
     <a-marker-camera preset='hiro'></a-marker-camera>
   </a-scene>
 </body>
