--- a/arport.html
+++ b/arport.html
@@ -7,7 +7,9 @@ Access-Control-Allow-Origin: *
 <script src="https://raw.githubusercontent.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
-
+        <script>
+            setInterval(requestTraffic, 1000);    
+        </script>
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
   </body>
