local request to traffic.js

--- a/arport.html
+++ b/arport.html
@@ -4,7 +4,8 @@ Access-Control-Allow-Origin: *
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
-<script src="https://raw.githubusercontent.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
+<!--<script src="https://raw.githubusercontent.com/jrem090/ARFrame/master/ARport/traffic.js"></script>-->
+<script src="/ARport/traffic.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
         <script>
