--- a/arport.html
+++ b/arport.html
@@ -5,7 +5,7 @@ Access-Control-Allow-Origin: *
 <!-- include ar.js for A-Frame -->
 <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 <!--<script src="https://raw.githubusercontent.com/jrem090/ARFrame/master/ARport/traffic.js"></script>-->
-<script src="https://raw.githubusercontent.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
+<script src="https://rawgit.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
         <script>
