--- a/arport.html
+++ b/arport.html
@@ -1,4 +1,6 @@
 Access-Control-Allow-Origin: *
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+
 
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
