--- a/arport.html
+++ b/arport.html
@@ -1,5 +1,7 @@
 Access-Control-Allow-Origin: *
-
+<head>
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+</head>
 
 
 <!-- include A-Frame obviously -->
@@ -9,7 +11,7 @@ Access-Control-Allow-Origin: *
 <!--<script src="https://raw.githubusercontent.com/jrem090/ARFrame/master/ARport/traffic.js"></script>-->
 <script src="https://rawgit.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
 <body style='margin : 0px; overflow: hidden;'>
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+        
     <a-scene embedded arjs>
         <script>
             setInterval(requestTraffic, 1000);    
