--- a/arport.html
+++ b/arport.html
@@ -1,5 +1,6 @@
 Access-Control-Allow-Origin: *
 <head>
+        Content-Security-Policy: upgrade-insecure-requests;
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 </head>
 
