--- a/arport.html
+++ b/arport.html
@@ -1,9 +1,12 @@
 Access-Control-Allow-Origin: *
+
+additional_head_content: <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <head>
         Content-Security-Policy: upgrade-insecure-requests;
         <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+        additional_head_content: <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
-
+additional_head_content: <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
