--- a/arport.html
+++ b/arport.html
@@ -5,7 +5,7 @@
       <a-assets>
         <a-asset-item id="airport" src="https://raw.githubusercontent.com/jrem090/ARFrame/demo/AIRSPACE_NY3.glb"></a-asset-item>
       </a-assets>
-            <a-entity gltf-model="#airport"></a-entity>
+            <a-entity scale=".5 .5 .5" gltf-model="#airport"></a-entity>
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
   </body>
