--- a/arport.html
+++ b/arport.html
@@ -1,5 +1,25 @@
-<script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+
+<head>
+    <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
+    <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        $.ajax({
+          url: 'https://adsbexchange.com/api/aircraft/json/lat/33.433638/lon/-112.008113/dist/10/',
+          type: 'GET',
+          dataType: 'json',
+  success: function(result) { console.log(result); },
+          error: function() { alert('ERROR!'); },
+          beforeSend: setHeader
+        });
+      });
+
+      function setHeader(xhr) {
+        xhr.setRequestHeader('api-auth', 'test');
+       }
+    </script>
+  </head>
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs>
       <a-assets>
