--- a/arport.html
+++ b/arport.html
@@ -1,6 +1,6 @@
 
 <head>
-    <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-1.4.2.min.js"></script>-->
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
