--- a/arport.html
+++ b/arport.html
@@ -6,6 +6,7 @@
     <script src="https://rawgit.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
   </head>
 <body style='margin : 0px; overflow: hidden;'>
+  <div id="demo"></div>
     <a-scene embedded arjs>
         <script>
             setInterval(requestTraffic, 1000);    
