hope this works

--- a/arport.html
+++ b/arport.html
@@ -12,8 +12,9 @@
             setInterval(requestTraffic, 1000);    
         </script>
       <a-assets>
-        <a-asset-item id="airport" src="https://raw.githubusercontent.com/jrem090/ARFrame/master/AIRSPACE.glb"></a-asset-item>
+        <!--<a-asset-item id="airport" src="https://raw.githubusercontent.com/jrem090/ARFrame/master/AIRSPACE.glb"></a-asset-item>-->
       </a-assets>
+      <div id="parent"></div>
             <a-entity scale="0.15 0.15 0.15" gltf-model="#airport"></a-entity>
         <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
