--- a/arport.html
+++ b/arport.html
@@ -7,6 +7,7 @@
   </head>
 <body style='margin : 0px; overflow: hidden;'>
   <div id="demo"></div>
+    requestTraffic;
     <a-scene embedded arjs>
         <script>
             setInterval(requestTraffic, 1000);    
