--- a/arport.html
+++ b/arport.html
@@ -4,11 +4,26 @@
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
     <script src="https://rawgit.com/jrem090/ARFrame/master/ARport/traffic.js"></script>
+    <script>
+      AFRAME.registerComponent('adsb', {
+        init: function () {
+          // Solution for Creating Entities.
+          var sceneEl = document.querySelector('a-scene'); 
+          
+          for (var i = 0; i < 50; i++) {
+            var boxEl = document.createElement('a-sphere');
+            boxEl.setAttribute('material', {color: '#EF2D5E'});
+            boxEl.setAttribute('position', {x: Math.random() * 20 - 10, y: Math.random() * 20 - 10, z: Math.random() * 20 - 10});
+            boxEl.setAttribute('scale', {x: Math.random() / 2, y: Math.random() / 2, z: Math.random() / 2});
+            sceneEl.appendChild(boxEl);
+          }
+        }
+      });
+    </script>
   </head>
 <body style='margin : 0px; overflow: hidden;'>
   <div id="demo"></div>
-    requestTraffic;
-    <a-scene embedded arjs>
+    <a-scene adsb>
         <script>
             setInterval(requestTraffic, 1000);    
         </script>
