--- a/arport.html
+++ b/arport.html
@@ -14,8 +14,8 @@
             var boxEl = document.createElement('a-sphere');
             boxEl.setAttribute('material', {color: '#EF2D5E'});
             boxEl.setAttribute('position', {x: Math.random() * 20 - 10, y: Math.random() * 20 - 10, z: Math.random() * 20 - 10});
-            boxEl.setAttribute('scale', {x: Math.random() / 2, y: Math.random() / 2, z: Math.random() / 2});
-            sceneEl.appendChild(boxEl);
+            boxEl.setAttribute('visible', false);
+              sceneEl.appendChild(boxEl);
           }
         }
       });
