--- a/arport.html
+++ b/arport.html
@@ -13,7 +13,7 @@
           for (var i = 0; i < 50; i++) {
             var boxEl = document.createElement('a-sphere');
             boxEl.setAttribute('material', {color: '#EF2D5E'});
-            boxEl.setAttribute('position', {x: Math.random() * 20 - 10, y: Math.random() * 20 - 10, z: Math.random() * 20 - 10});
+            //boxEl.setAttribute('position', {x: Math.random() * 20 - 10, y: Math.random() * 20 - 10, z: Math.random() * 20 - 10});
             boxEl.setAttribute('visible', false);
               sceneEl.appendChild(boxEl);
           }
