--- a/arport.html
+++ b/arport.html
@@ -14,7 +14,7 @@
             var boxEl = document.createElement('a-sphere');
             boxEl.setAttribute('material', {color: '#EF2D5E'});
             //boxEl.setAttribute('position', {x: Math.random() * 20 - 10, y: Math.random() * 20 - 10, z: Math.random() * 20 - 10});
-               boxEl.setAttribute('scale', {0.1 0.1 0.1})
+               boxEl.setAttribute('radius', 0.1);
             boxEl.setAttribute('visible', false);
               sceneEl.appendChild(boxEl);
           }
