--- a/arport.html
+++ b/arport.html
@@ -21,6 +21,9 @@
         }
       });
     </script>
+    Lat: <input type="text" name="lat"><br>
+    Lon: <input type="text" name="lon"><br>
+    <input type="submit" value="Submit">
   </head>
 <body style='margin : 0px; overflow: hidden;'>
   <div id="demo"></div>
