--- a/arport.html
+++ b/arport.html
@@ -21,9 +21,11 @@
         }
       });
     </script>
+    <div top-bar>
     Lat: <input type="text" name="lat"><br>
     Lon: <input type="text" name="lon"><br>
     <input type="submit" value="Submit">
+    </div>
   </head>
 <body style='margin : 0px; overflow: hidden;'>
   <div id="demo"></div>
