--- a/arport.html
+++ b/arport.html
@@ -29,7 +29,7 @@
   </head>
 <body style='margin : 0px; overflow: hidden;'>
   <div id="demo"></div>
-    <a-scene adsb>
+    <a-scene embedded>
         <script>
             setInterval(requestTraffic, 1000);    
         </script>
