--- a/arport.html
+++ b/arport.html
@@ -28,8 +28,14 @@
     </div>
   </head>
 <body style='margin : 0px; overflow: hidden;'>
+    <style>
+  #demo {
+    width:100%;
+    height:200px;
+  }
+</style>
   <div id="demo"></div>
-    <a-scene embedded="">
+    <a-scene adsb embedded="">
         <script>
             setInterval(requestTraffic, 1000);    
         </script>
