--- a/arport.html
+++ b/arport.html
@@ -36,6 +36,7 @@
   </style>
   <div id="demo">
     <a-scene adsb embedded="">
+        <a-entity text="value: North;" position="1 0 0"></a-entity>
         <script>
             setInterval(requestTraffic, 1000);    
         </script>
