--- a/arport.html
+++ b/arport.html
@@ -35,7 +35,8 @@
   }
   </style>
   <div id="demo">
-    <a-scene adsb embedded="">
+    <!--<a-scene adsb embedded="">-->
+     <a-scene adsb >
         <a-entity text="value: North;" position="1 0 0"></a-entity>
         <script>
             setInterval(requestTraffic, 1000);    
