--- a/arport.html
+++ b/arport.html
@@ -34,7 +34,7 @@
     height:200px;
   }
   </style>
-  <div id="demo">
+    <div id="demo"></div>
     <!--<a-scene adsb embedded="">-->
      <a-scene adsb >
         <a-entity text="value: North;" position="1 0 0"></a-entity>
@@ -47,5 +47,5 @@
       <a-entity scale="0.15 0.15 0.15" gltf-model="#airport"></a-entity>
       <a-marker-camera preset='hiro'></a-marker-camera>
     </a-scene>
-  </div>
+  <!--</div>-->
 </body>
