--- a/airport.html
+++ b/airport.html
@@ -1,4 +1,4 @@
-<headf>
+<head>
  Lat: <input type="text" name="lat"><br>
  Lon: <input type="text" name="lon"><br>
  <input type="submit" value="Submit">
