--- a/airport.html
+++ b/airport.html
@@ -1,5 +1,7 @@
 <head>
- Lat: <input type="text" name="lat"><br>
- Lon: <input type="text" name="lon"><br>
- <input type="submit" value="Submit">
- </head>
+     <div top-bar>
+    Lat: <input type="text" name="lat"><br>
+    Lon: <input type="text" name="lon"><br>
+    <input type="submit" value="Submit">
+    </div>
+</head>
