--- a/arport.html
+++ b/arport.html
@@ -39,7 +39,10 @@
      <a-scene adsb >
         <a-entity text="value: North;" position="1 0 0"></a-entity>
         <script>
-            setInterval(requestTraffic, 1000);    
+            if(getQueryVariable("lat")!=false)
+                setInterval(requestTraffic(getQueryVariable("lat"),getQueryVariable("lon")), 1000);
+            else
+                setInterval(requestTraffic(33.433638,-112.008113), 1000);
         </script>
       <a-assets>
         <!--<a-asset-item id="airport" src="https://raw.githubusercontent.com/jrem090/ARFrame/master/AIRSPACE.glb"></a-asset-item>-->
