--- a/index.html
+++ b/index.html
@@ -6,4 +6,12 @@
 <h1><a href="https://jrem090.github.io/ARFrame/arport.html">AR Port</a></h1>
 <h1><a href="https://jrem090.github.io/ARFrame/airport.html">AIRPort</a></h1>
 <h1><a href="https://jrem090.github.io/ARFrame/AR_CUBE.html">AR Cube</a></h1>
+
+</body>
+
+<header>
+  Model Viewer
+</header>
+<body>
+<h1><a href="https://jrem090.github.io/ARFrame/arcade.html">Arcade</a></h1>
 </body>
