--- a/arcade.html
+++ b/arcade.html
@@ -10,8 +10,8 @@ Access-Control-Allow-Origin: *
     </a-assets>
     
     <a-entity gltf-model="#arcade" position="-1 -1 -1" rotation="0 0 0" >
-	<a-animation attribute="rotation" from="0 0 0" to="0 360 0" repeat="indefinite" dur="100000" easing="linear"><A-animation>
+	<a-animation attribute="rotation" from="0 0 0" to="0 360 0" repeat="indefinite" dur="100000" easing="linear"></a-animation>
 	</a-entity>
-	<a-camera look-controls wasd-controls="acceleration:100" position="10 5 10" rotation="180 180 180" fly="true"></a-entity>
+	<a-entity camera look-controls wasd-controls="acceleration:100" position="10 5 10" fly="true"></a-entity>
   </a-scene>
 </body>
