better fit arcade 2

--- a/arcade.html
+++ b/arcade.html
@@ -1,8 +1,8 @@
 Access-Control-Allow-Origin: *
-
+<head>
 <!-- include A-Frame obviously -->
 <script src="https://aframe.io/releases/1.0.0/aframe.min.js"></script>
-
+</head>
 <body style='margin : 0px; overflow: hidden;'>
 <a-scene background="color: #4A2040">
     <a-assets>
